initial implementation of TIME_SERIES_TABLE component